ensure panel is visible over black bgs

--- a/src/styles/content.less
+++ b/src/styles/content.less
@@ -7,7 +7,7 @@
 @color_it: rgb( 255, 40, 40 );
 @color_youtube_toolbar: rgb( 117, 117, 117 );
 @color_panel_text: rgb( 150, 150, 150 );
-@color_panel_background: rgba( 0, 0, 0, 0.5 );
+@color_panel_background: rgba( 25, 25, 25, 0.6 );
 @color_panel_shadow: rgba( 0, 0, 0, 0.9 );
 @color_input_text: rgb( 255, 255, 255 );
 @color_input_border: rgb( 100, 100, 100 );
@@ -50,7 +50,7 @@ input[type=number]::-webkit-outer-spin-button {
 	font-family: 'robotoregular', sans-serif;
 	font-size: 12px;
 	color: @color_panel_text;
-	background: linear-gradient(to bottom, rgba(0,0,0,0.75) 0%,rgba(0,0,0,0) 100%) @color_panel_background;
+	background: linear-gradient(to bottom, rgba(0,0,0,0.55) 0%,rgba(0,0,0,0) 100%) @color_panel_background;
 	-webkit-filter: drop-shadow( 0 15px 15px @color_panel_shadow );
 
 	&:before {
